// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`s44SettingContainerReducer returns the initial state 1`] = `
Immutable.Map {
  settings: Immutable.Map {
  },
  loading: false,
}
`;

exports[`s44SettingContainerReducer should handle s44SettingsContainerSuccess 1`] = `
Immutable.Map {
  settings: "mockSettings",
  loading: false,
}
`;

exports[`s44SettingContainerReducer should set loading to true should handle classSelectionSuccess action 1`] = `
Immutable.Map {
  settings: Immutable.Map {
  },
  loading: true,
}
`;

exports[`s44SettingContainerReducer should set loading to true should handle gradeSelectionSuccess action 1`] = `
Immutable.Map {
  settings: Immutable.Map {
  },
  loading: true,
}
`;

exports[`s44SettingContainerReducer should set loading to true should handle gradeSelectionSuccess action 2`] = `
Immutable.Map {
  settings: Immutable.Map {
  },
  loading: true,
}
`;

exports[`s44SettingContainerReducer should set loading to true should handle groupSelectionSuccess action 1`] = `
Immutable.Map {
  settings: Immutable.Map {
  },
  loading: true,
}
`;

exports[`s44SettingContainerReducer should set loading to true should handle s44SettingsContainerRequest action 1`] = `
Immutable.Map {
  settings: Immutable.Map {
  },
  loading: true,
}
`;

exports[`s44SettingContainerReducer should set loading to true should handle studentSelectionSuccess action 1`] = `
Immutable.Map {
  settings: Immutable.Map {
  },
  loading: true,
}
`;

exports[`s44SettingContainerReducer should set loading to true should handle teacherSelectionSuccess action 1`] = `
Immutable.Map {
  settings: Immutable.Map {
  },
  loading: true,
}
`;
